# fresh

./: .dockerignore  .gitignore  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  FILE-EXPLORER-STATUS.md  Makefile  PLAN_composite_rendering_reuse.md  README.md  RELEASE_NOTES.md  TODO.md  build.rs  dist-workspace.toml  index.html  test_diff.ts
.config/: nextest.toml
docs/: ARCHITECTURE.md  AUDIT_AND_VERIFICATION_DESIGN.md  CONFIG_EDITOR_DESIGN.md  CR.md  DOCUMENT_MODEL_STATUS.md  LANGUAGES.md  LSP_ARCHITECTURE.md  LSP_GUIDE.md  MERGE.md  MULTI_BUFFER_SINGLE_TAB_RESEARCH.md  REWRITE.md  TODO.md  USER_GUIDE.md  VISUAL_REGRESSION.md  VISUAL_REGRESSION_TESTING.md  infographic.txt  plugin-api.md  plugin_api_analysis.md  quickjs-migration-plan.md  quickjs-migration.md
homepage/: index.html
keymaps/: default.json
plugins/: audit_mode.i18n.json  audit_mode.ts  buffer_modified.i18n.json  buffer_modified.ts  calculator.i18n.json  clangd_support.i18n.json  color_highlighter.i18n.json  config-schema.json  config_editor.ts  csharp_support.i18n.json  diagnostics_panel.i18n.json  diff_view.ts  find_references.i18n.json  find_references.ts  git-find-file.lua  git-grep.lua  git_blame.i18n.json  git_find_file.i18n.json  git_grep.i18n.json  git_gutter.i18n.json  git_gutter.ts  git_log.i18n.json  live_grep.i18n.json  manual_help.ts  markdown_compose.i18n.json  markdown_compose.ts  merge_conflict.i18n.json  path_complete.i18n.json  search_replace.i18n.json  test_i18n.i18n.json  theme_editor.i18n.json  theme_editor.ts  (+4 more)
tests/terminal_cleanup_test/: Cargo.toml  sequence_order_test.rs
(+341 files in other folders)
